--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bootstrap-vue": "^2.2.0",
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
-    "vuelidate": "^0.7.5"
+	"vue-cli-plugin-bootstrap-vue": "^0.6.0"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.7.0",
@@ -33,7 +33,6 @@
     "prettier": "^1.19.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
-    "vue-cli-plugin-bootstrap-vue": "^0.6.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
